src/test/ui/super-at-top-level.rs
use super::f; //~ ERROR There are too many initial `super`s

fn main() {
}
